change to knight game

--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
       <div class="card-header">
         <h5 class="card-title h4">Juego de las 8 damas</h5>
         <span class="badge bg-primary h6 card-subtitle" id="counting">0/8</span>
+        <button class="btn btn-danger float-end" onclick="detener = true">Detener</button>
+        <button class="btn btn-success float-end me-3" onclick="iniciar()">Buscar Camino</button>
       </div>
       <div class="card-body">
       <div class="row" data-id="0">
-          <div  data-id="0" class="chess-space white col"></div>
+          <div  data-id="0" class="chess-space white col">
+            <i class="d-none d-xl-block fas fa-chess-rook fa-fw fa-7x"></i>
+            <i class="d-none d-md-block d-xl-none fas fa-chess-rook fa-fw fa-4x"></i>
+            <i class="d-none d-sm-block d-md-none fas fa-chess-rook fa-fw fa-3x"></i>
+            <i class="d-block d-sm-none fas fa-chess-rook fa-fw " style="font-size: x-large"></i>
+          </div>
           <div  data-id="1" class="chess-space black col"></div>
           <div  data-id="2" class="chess-space white col"></div>
           <div  data-id="3" class="chess-space black col"></div>
@@ -110,7 +117,12 @@
       </div>
       <div class="row" data-id="7">
         <div  data-id="0" class="chess-space black col"></div>
-        <div  data-id="1" class="chess-space white col"></div>
+        <div  data-id="1" class="chess-space white col">
+          <i class="d-none d-xl-block fas fa-chess-knight fa-fw fa-7x"></i>
+          <i class="d-none d-md-block d-xl-none fas fa-chess-knight fa-fw fa-4x"></i>
+          <i class="d-none d-sm-block d-md-none fas fa-chess-knight fa-fw fa-3x"></i>
+          <i class="d-block d-sm-none fas fa-chess-knight fa-fw " style="font-size: x-large"></i>
+        </div>
         <div  data-id="2" class="chess-space black col"></div>
         <div  data-id="3" class="chess-space white col"></div>
         <div  data-id="4" class="chess-space black col"></div>
@@ -119,6 +131,11 @@
         <div  data-id="7" class="chess-space white col"></div>
       </div>
     </div>
+      </div>
+      <div class="card my-3">
+        <div class="card-body" id="answers">
+
+        </div>
       </div>
     </div>
   </div>
@@ -129,92 +146,21 @@
         </div>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
-</div>
+    </div>
   </div>
 <script>
-  const dama =
-    '            <i class="d-none d-xl-block fas fa-chess-queen fa-fw fa-7x"></i>\n' +
-    '            <i class="d-none d-md-block d-xl-none fas fa-chess-queen fa-fw fa-4x"></i>\n' +
-    '            <i class="d-none d-sm-block d-md-none fas fa-chess-queen fa-fw fa-3x"></i>\n' +
-    '            <i class="d-block d-sm-none fas fa-chess-queen fa-fw " style="font-size: x-large"></i>';
-  const spaces = document.getElementsByClassName('chess-space')
-  let ladiesQuantity = 0
   const toastElList = [].slice.call(document.querySelectorAll('.toast'))
   const toastList = toastElList.map(function (toastEl) {
     return new bootstrap.Toast(toastEl)
   })
-  for (let space of spaces) {
-    space.addEventListener('click', ({currentTarget}) => {
-      if (!currentTarget.innerHTML) {
-        if (!checkCanBeAte(currentTarget)) {
-          currentTarget.innerHTML = dama
-          ladiesQuantity += 1
-        }
-        else {
-          setMessage('Aqui te van a comer')
-        }
-      }
-      else {
-        currentTarget.innerHTML = null
-        ladiesQuantity -= 1
-      }
-      if (ladiesQuantity === 8) setMessage('Has Ganado!!!', 'bg-success')
-      document.getElementById('counting').innerHTML = ladiesQuantity + '/8'
-    })
-  }
-
-  function setContradiagonal(normalSteps, el) {
-    const desplazamiento = parseInt(el.dataset.id) - parseInt(el.parentElement.dataset.id)
-    let stepsContraDiagonalHorizontal = normalSteps
-    let stepsContraDiagonalVertical = normalSteps
-    if (desplazamiento >= 0) {
-      stepsContraDiagonalHorizontal = [...normalSteps].splice(desplazamiento)
-    } else {
-      stepsContraDiagonalVertical = [...normalSteps].splice(-desplazamiento)
-    }
-    return {stepsContraDiagonalHorizontal, stepsContraDiagonalVertical};
-  }
-
-  function setDiagonal(el, normalSteps) {
-    const desplazamientoDiagonal = parseInt(el.dataset.id) - 7 + parseInt(el.parentElement.dataset.id)
-    let stepsDiagonalHorizontal = normalSteps
-    let stepsDiagonalVertical = [...normalSteps].reverse()
-    if (desplazamientoDiagonal >= 0) {
-      stepsDiagonalHorizontal = [...normalSteps].splice(desplazamientoDiagonal)
-    } else {
-      stepsDiagonalVertical = stepsDiagonalVertical.splice(-desplazamientoDiagonal)
-    }
-    return {stepsDiagonalHorizontal, stepsDiagonalVertical};
-  }
-
-  function checkCanBeAte(el) {
-    let canBeEaten = false
-    const normalSteps = [0,1,2,3,4,5,6,7]
-    let {stepsDiagonalHorizontal, stepsDiagonalVertical} = setDiagonal(el, normalSteps);
-    let {stepsContraDiagonalHorizontal, stepsContraDiagonalVertical} = setContradiagonal(normalSteps, el);
-    for (let step of normalSteps) {
-      // horizontal
-      if (el.parentElement.children[step].children.length > 0 || //horizontal
-        el.parentElement.parentElement.children[step].children[parseInt(el.dataset.id)].children.length > 0 || // vertical
-        ( step < stepsContraDiagonalHorizontal.length && step < stepsContraDiagonalVertical.length &&
-          el.parentElement.parentElement.children[stepsContraDiagonalVertical[step]].children[stepsContraDiagonalHorizontal[step]].children.length > 0
-        ) || //contradiagonal
-        (step < stepsDiagonalHorizontal.length && step < stepsDiagonalVertical.length &&
-          el.parentElement.parentElement.children[stepsDiagonalVertical[step]].children[stepsDiagonalHorizontal[step]].children.length > 0
-        )
-      ) {
-        canBeEaten = true
-        break
-      }
-    }
-    return canBeEaten
-  }
   function setMessage(message, classColor = 'bg-danger') {
     document.getElementsByClassName('toast-body')[0].innerHTML = message
     const element = document.getElementsByClassName('toast')[0]
     element.className = element.className.replace(/bg-\w+/g, classColor)
     toastList[0].show()
   }
+
 </script>
+<script src="js/caballoComeTore.js"></script>
 </body>
 </html>
