draw start board game

--- a/index.html
+++ b/index.html
@@ -37,16 +37,11 @@
         <h5 class="card-title h4">Juego de las 8 damas</h5>
         <span class="badge bg-primary h6 card-subtitle" id="counting">0/8</span>
         <button class="btn btn-danger float-end" onclick="detener = true">Detener</button>
-        <button class="btn btn-success float-end me-3" onclick="iniciar()">Buscar Camino</button>
+        <button class="btn btn-success float-end me-3" id="iniciar" onclick="iniciar()">Buscar Camino</button>
       </div>
       <div class="card-body">
       <div class="row" data-id="0">
-          <div  data-id="0" class="chess-space white col">
-            <i class="d-none d-xl-block fas fa-chess-rook fa-fw fa-7x"></i>
-            <i class="d-none d-md-block d-xl-none fas fa-chess-rook fa-fw fa-4x"></i>
-            <i class="d-none d-sm-block d-md-none fas fa-chess-rook fa-fw fa-3x"></i>
-            <i class="d-block d-sm-none fas fa-chess-rook fa-fw " style="font-size: x-large"></i>
-          </div>
+          <div  data-id="0" class="chess-space white col"></div>
           <div  data-id="1" class="chess-space black col"></div>
           <div  data-id="2" class="chess-space white col"></div>
           <div  data-id="3" class="chess-space black col"></div>
